# android-fuzzing

./: README.md
AFLplusplus/: CMakeLists.txt
jenv/: CMakeLists.txt  jenv.c
jenv/include/: jenv.h
native/: CMakeLists.txt  afl.js  fuzz.c
slinked_jni/: CMakeLists.txt  fuzz.c
wlinked_jni/: afl.js  fuzz.c
